Sending now SMS via AWS SDK
