# model/sms.go
@@ -1,0 +1,7 @@
+package model
+
+// SMS model
+type SMS struct {
+	Message     string `json:"message"`
+	PhoneNumber string `json:"phoneNumber"`
+}
